syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/kenyako/auth/pkg/auth_v1;auth_v1";

service UserAPI {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string password_confirm = 5;
    UserRole role = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

enum UserRole {
    USER = 0;
    ADMIN = 1;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    UserRole role = 5;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message UpdateRequest {
    int64 id = 1;
    optional string name = 2;
    optional string email = 3;
    optional UserRole role = 4;
}

message DeleteRequest {
    int64 id = 1;
}